# sidestream

./: .gitignore  LICENSE  README.md  build-linux-arm64.sh  index.html  linux_font_problem.md  package-lock.json  package.json  refactor_applayout.md  refactor_session_store.md
.github/workflows/: build-linux.yml  build-windows.yml
docs/: CNAME  about.html  api-keys.html  download-linux.html  download.html  downloads.js  index.html  styles.css
scripts/: dmg-background.tiff  dmg-settings.py  gen-dmg-background.py  make-dmg.sh  notarize-dmg.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_all_icons.sh  icon.icns
src-tauri/src/: audio.rs  commands.rs  discovery.rs  lib.rs  llm.rs  llm_anthropic.rs  llm_gemini.rs  llm_logger.rs  llm_openai.rs  llm_voice.rs  main.rs  mime_utils.rs  secure_storage.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  openai.rs
src/hooks/: index.ts  useApiKeys.ts  useChat.ts  useDiscovery.ts  useResizablePanes.ts  useTextInputContextMenu.ts  useVoiceInput.ts
src/lib/: chatStreamListeners.ts  chatUtils.ts  citationHelpers.ts  cssUtils.ts  discovery.ts  discoveryModes.ts  exportUtils.ts  llmParameters.ts  logger.ts  messageHelpers.ts  models.ts  sessionFork.ts  sessionHelpers.ts  sessionMigration.ts  sessionSearch.ts  streamingBuffer.ts  thinkingOptions.ts  types.ts  updateChecker.ts
src/stores/: backgroundStreamStore.ts  chatStore.ts  (+3 more)
website/: about.html  download-linux.html  download.html  index.html  styles.css
(+50 files in other folders)
