[package]
name = "sidestream"
version = "1.1.2"
description = "A cross-platform AI chat client"
authors = ["Eric Brandon"]
license = "MIT"
repository = "https://github.com/ericbrandon/sidestream"
edition = "2021"

[lib]
name = "sidestream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2.3.2"

# Audio capture
cpal = "0.15"
hound = "3.5"
parking_lot = "0.12"

# Secure storage
aes-gcm = "0.10"
sha2 = "0.10"
hostname = "0.4"
rand = "0.8"

# Regex for parsing
regex = "1"
